--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -19,7 +19,7 @@ jobs:
           ls ${{ github.workspace }}
       - name: Build image
         run: |
-          docker build -t "hub.docker.com/hroman9n/go-web-server:0.0.1" .
+          docker build -t "hroman9n/go-web-server:0.0.1" .
       - name: Publish image to Dockerhub
         shell: bash
         env:
@@ -27,5 +27,5 @@ jobs:
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
         run: |
           docker login -u "${DOCKERHUB_LOGIN}" -p "${DOCKERHUB_TOKEN}" && \
-          docker push hub.docker.com/hroman9n/go-web-server:0.0.1
+          docker push hroman9n/go-web-server:0.0.1
       - run: echo "🍏 This job's status is ${{ job.status }}."
