--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -1,19 +1,15 @@
 ---
-name: GitHub Actions
-run-name: "${{ github.actor }} testing actions on ${{ github.run_id }} workflow"
+name: Build and publish new image
+run-name: "New build on ${{ github.run_id }} workflow"
 on:
   - push
 jobs:
-  Test-actions:
+  build-and-publish:
     runs-on: self-hosted
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
       - name: Check out repository code
         uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
@@ -28,4 +24,3 @@ jobs:
         run: |
           docker login -u "${DOCKERHUB_LOGIN}" -p "${DOCKERHUB_TOKEN}" && \
           docker push hroman9n/go-web-server:0.0.1
-      - run: echo "🍏 This job's status is ${{ job.status }}."
