--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.ref }}
+          fetch-tags: true
       - name: Debug info
         run: git describe --tags --abbrev=0
       - name: List files in the repository
